--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,7 @@ spring.datasource.password = HUmatrope488!
 spring.jpa.database = POSTGRESQL
 spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto = create-drop
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.properties.hibernate.format_sql=true
+
