--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,10 @@ spring.datasource.password = HUmatrope488!
 # Hibernate properties
 spring.jpa.database = POSTGRESQL
 spring.jpa.show-sql = false
-spring.jpa.hibernate.ddl-auto = create-drop
-#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.properties.hibernate.format_sql=true
 
+logging.file.path=.
+logging.file.name=GEM_WEBAPP.log
